Anket formu tamamlandı ve daha estetik bir hale getirildi

--- a/index.html
+++ b/index.html
@@ -21,24 +21,28 @@
                 </div>
 
                 <form action="">
+
                     <div class="Survey-article-content">
                         <div class="Survey-article-content-qn">*Name:</div>
                         <div class="Survey-article-content-ans">
                             <input type="text" placeholder="Enter your name">
                         </div>
                     </div>
+
                     <div class="Survey-article-content">
                         <div class="Survey-article-content-qn">*Email:</div>
                         <div class="Survey-article-content-ans">
                             <input type="email" placeholder="Enter your email">
                         </div>
                     </div>
+
                     <div class="Survey-article-content">
                         <div class="Survey-article-content-qn">*Age:</div>
                         <div class="Survey-article-content-ans">
                             <input type="number" placeholder="Enter your age">
                         </div>
                     </div>
+
                     <div class="Survey-article-content">
                         <div class="Survey-article-content-qn">What kind of music do you like?</div>
                         <div class="Survey-article-content-ans">
@@ -50,6 +54,7 @@
                             </select>
                         </div>
                     </div>
+
                     <div class="Survey-article-content">
                         <div class="Survey-article-content-qn">Do you play any instrument?</div>
                         <div class="Survey-article-content-ans">
@@ -65,12 +70,40 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="Survey-article-content">
-                        
+                        <div class="Survey-article-content-qn">which type of instrument(s) would you like to play?</div>
+                        <div class="Survey-article-content-ans">
+                            <div class="Survey-article-content-ans-checkbox">
+                                <input type="checkbox">
+                            <label for="">Stringed</label>
+                            </div>
+                            <div class="Survey-article-content-ans-checkbox">
+                                <input type="checkbox">
+                            <label for="">wind</label>
+                            </div>
+                            <div class="Survey-article-content-ans-checkbox">
+                                <input type="checkbox">
+                            <label for="">Membrane</label>
+                            </div>
+                            <div class="Survey-article-content-ans-checkbox">
+                                <input type="checkbox">
+                            <label for="">Plate</label>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="Survey-article-content">
-                        
+                        <div class="Survey-article-content-qn">Share your opinions about music with us</div>
+                        <div class="Survey-article-content-ans">
+                            <textarea name="" cols="30" rows="10"></textarea>
+                        </div>
                     </div>
+
+                    <div class="Survey-article-content">
+                        <input type="submit" class="submit">
+                    </div>
+
                 </form>
 
             </div>
